// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSVGStyles Returns correct styles 1`] = `
Object {
  "  .maxi-svg-icon-block__icon svg circle[data-fill]:not([fill^=\\"none\\"])": Object {
    "SVGPathFill": Object {
      "general": Object {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg circle[data-stroke]:not([stroke^=\\"none\\"])": Object {
    "SVGPathStroke": Object {
      "general": Object {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg g[data-fill]:not([fill^=\\"none\\"])": Object {
    "SVGPathFill": Object {
      "general": Object {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg g[data-stroke]:not([stroke^=\\"none\\"])": Object {
    "SVGPathStroke": Object {
      "general": Object {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg path": Object {
    "SVGPath": Object {
      "general": Object {
        "stroke-width": 2,
      },
      "label": "SVG path",
      "m": Object {
        "stroke-width": 20,
      },
    },
  },
  "  .maxi-svg-icon-block__icon svg path[data-fill]:not([fill^=\\"none\\"])": Object {
    "SVGPathFill": Object {
      "general": Object {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg path[data-stroke]:not([stroke^=\\"none\\"])": Object {
    "SVGPathStroke": Object {
      "general": Object {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg use[data-fill]:not([fill^=\\"none\\"])": Object {
    "SVGPathFill": Object {
      "general": Object {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg use[data-stroke]:not([stroke^=\\"none\\"])": Object {
    "SVGPathStroke": Object {
      "general": Object {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg[data-fill]:not([fill^=\\"none\\"])": Object {
    "SVGPathFill": Object {
      "general": Object {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg[data-fill]:not([fill^=\\"none\\"]) *": Object {
    "SVGPathFill": Object {
      "general": Object {
        "fill": "var(--maxi-light-icon-fill,rgba(var(--maxi-light-color-4,255,74,23),1))",
      },
      "label": "SVG path-fill",
    },
  },
  "  .maxi-svg-icon-block__icon svg[data-stroke]:not([stroke^=\\"none\\"])": Object {
    "SVGPathStroke": Object {
      "general": Object {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
  "  .maxi-svg-icon-block__icon svg[data-stroke]:not([stroke^=\\"none\\"]) *": Object {
    "SVGPathStroke": Object {
      "general": Object {
        "stroke": "var(--maxi-light-icon-stroke,rgba(var(--maxi-light-color-7,8,18,25),1))",
      },
      "label": "SVG Path stroke",
    },
  },
}
`;

exports[`getSVGStyles Should return correct icon size 1`] = `
Object {
  "iconSize": Object {
    "general": Object {
      "width": "32px",
    },
    "l": Object {
      "width": "32px",
    },
    "label": "Icon size",
    "m": Object {
      "width": "32px",
    },
    "s": Object {
      "width": "32px",
    },
    "xl": Object {
      "width": "32px",
    },
    "xs": Object {
      "width": "32px",
    },
    "xxl": Object {
      "width": "32px",
    },
  },
}
`;

exports[`getSVGStyles Should return correct icon size with disableHeight: false 1`] = `
Object {
  "iconSize": Object {
    "general": Object {
      "height": "32px",
      "width": "32px",
    },
    "l": Object {
      "height": "32px",
      "width": "32px",
    },
    "label": "Icon size",
    "m": Object {
      "height": "32px",
      "width": "32px",
    },
    "s": Object {
      "height": "32px",
      "width": "32px",
    },
    "xl": Object {
      "height": "32px",
      "width": "32px",
    },
    "xs": Object {
      "height": "32px",
      "width": "32px",
    },
    "xxl": Object {
      "height": "32px",
      "width": "32px",
    },
  },
}
`;

exports[`getSVGStyles Should return right styles with height fit-content, width/height ratio < 1 with disableHeight: true 1`] = `
Object {
  "iconSize": Object {
    "general": Object {},
    "label": "Icon size",
  },
}
`;

exports[`getSVGStyles Should return right styles with height fit-content, width/height ratio > 1 with disableHeight true 1`] = `
Object {
  "iconSize": Object {
    "general": Object {},
    "label": "Icon size",
  },
}
`;

exports[`getSVGStyles Should work on responsive 1`] = `
Object {
  "iconSize": Object {
    "general": Object {},
    "label": "Icon size",
  },
}
`;
